update to include tvshows

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="grid-container text-center      ">
         <div class="grid-x grid-margin-x">
             <div class="cell small-12">
-                <h1>THE MOVIE DATABASE</h1>
+                <h1>MOVIES & TV SHOWS DB</h1>
                 <h3><span id = "weather"></span></h3>
             </div>
         </div>
